full_transpiler_code/tuc_transpiler.output
Terminals unused in grammar

    DECIMAL
    KW_VAR
    KW_INT
    KW_REAL
    KW_FUNC
    KW_BEGIN
    KW_PLUS
    KW_MINUS
    KW_MUL
    KW_DIV
    KW_MOD
    KW_LESSEQUAL
    KW_GREATEREQUAL
    KW_LESSTHAN
    KW_GREATHAN
    KW_INEQ
    KW_AND
    KW_OR
    KW_NOT
    KW_EQUAL
    KW_EXPONENT


Grammar

    0 $accept: program $end

    1 program: input

    2 input: ε
    3      | input variable_definition ';'
    4      | input expr ';'
    5      | input function_definition ';'
    6      | input complicated_types ';'
    7      | input commands ';'
    8      | input macro

    9 macro: KW_MACRO IDENTIFIER STRING
   10      | KW_MACRO IDENTIFIER expr

   11 $@1: ε

   12 @2: ε

   13 commands: KW_IF '(' expr ')' ':' $@1 stmts @2 else_statement KW_ENDIF

   14 $@3: ε

   15 @4: ε

   16 commands: KW_WHILE '(' expr ')' ':' $@3 stmts @4 KW_ENDWHILE

   17 @5: ε

   18 @6: ε

   19 commands: KW_FOR IDENTIFIER KW_IN '[' arithmetic_expr_non_empty ':' arithmetic_expr_non_empty step ']' ':' @5 stmts @6 KW_ENDFOR
   20         | IDENTIFIER ASSIGNMENT_OP '[' expr KW_FOR IDENTIFIER ':' POSINT ']' ':' KW_VARIABLE_TYPE
   21         | IDENTIFIER ASSIGNMENT_OP '[' expr KW_FOR IDENTIFIER ':' KW_VARIABLE_TYPE KW_IN IDENTIFIER KW_OF POSINT ']' ':' KW_VARIABLE_TYPE

   22 else_statement: ε

   23 @7: ε

   24 else_statement: KW_ELSE ':' @7 stmts

   25 step: ε
   26     | ':' arithmetic_expr_non_empty

   27 stmts: ε
   28      | stmts loop_thing ';'
   29      | stmts variable_definition ';'
   30      | stmts expr ';'
   31      | stmts commands ';'

   32 loop_thing: KW_BREAK
   33           | KW_CONTINUE

   34 $@8: ε

   35 complicated_types: KW_COMP IDENTIFIER $@8 ':' declaration_comp function_definition_section KW_ENDCOMP

   36 declaration_comp: ε
   37                 | declaration_comp variable_definition_comp ';'

   38 variable_definition_comp: variable_list_comp ':' KW_VARIABLE_TYPE
   39                         | '#' IDENTIFIER '[' POSINT ']' ':' KW_VARIABLE_TYPE
   40                         | '#' IDENTIFIER '[' ']' ':' KW_VARIABLE_TYPE
   41                         | '#' KW_CONST IDENTIFIER ASSIGNMENT_OP VALUE ':' KW_VARIABLE_TYPE

   42 variable_list_comp: '#' IDENTIFIER
   43                   | variable_list_comp ',' '#' IDENTIFIER

   44 function_definition_section: ε
   45                            | function_definition_section function_definition_comp ';'

   46 function_definition_comp: KW_DEF IDENTIFIER '(' arguments ')' return_type_comp ':' body KW_ENDDEF

   47 return_type_comp: ε
   48                 | KW_FUNC_RETURN KW_VARIABLE_TYPE

   49 $@9: ε

   50 func_call: IDENTIFIER '(' $@9 func_args ')'

   51 func_args: ε
   52          | expr
   53          | STRING
   54          | func_args ',' expr
   55          | func_args ',' STRING

   56 expr: func_call
   57     | NUMBERS
   58     | KW_FALSE
   59     | KW_TRUE
   60     | use_comp_variable
   61     | IDENTIFIER
   62     | IDENTIFIER '[' expr ']'
   63     | '(' expr ')'
   64     | expr CALC_OP expr
   65     | expr EXPONENTIATION_OP expr
   66     | expr RELATIONAL_OP expr
   67     | expr LOGICAL_AND_OR_OP expr
   68     | LOGICAL_NOT_OP expr
   69     | UNARY_OP expr
   70     | IDENTIFIER ASSIGNMENT_OP expr
   71     | IDENTIFIER '[' expr ']' ASSIGNMENT_OP expr
   72     | '#' IDENTIFIER ASSIGNMENT_OP expr
   73     | '#' IDENTIFIER '[' expr ']' ASSIGNMENT_OP expr

   74 $@10: ε

   75 expr: IDENTIFIER '.' $@10 func_call

   76 $@11: ε

   77 expr: IDENTIFIER '[' expr ']' '.' $@11 func_call

   78 $@12: ε

   79 expr: '#' IDENTIFIER '.' $@12 func_call

   80 $@13: ε

   81 expr: '#' IDENTIFIER '[' expr ']' '.' $@13 func_call
   82     | '#' IDENTIFIER '.' use_of_comp_variable
   83     | '#' IDENTIFIER '[' expr ']' '.' use_of_comp_variable
   84     | IDENTIFIER '.' use_of_comp_variable
   85     | IDENTIFIER '.' use_of_comp_variable ASSIGNMENT_OP expr
   86     | '#' IDENTIFIER '[' expr ']' '.' use_of_comp_variable ASSIGNMENT_OP expr

   87 use_of_comp_variable: use_comp_variable_with_period
   88                     | use_of_comp_variable '[' expr ']' '.' use_comp_variable_with_period
   89                     | use_of_comp_variable '.' use_comp_variable_with_period

   90 use_comp_variable_with_period: '#' IDENTIFIER

   91 use_comp_variable: '#' IDENTIFIER
   92                  | '#' IDENTIFIER '[' expr ']'

   93 arithmetic_expr_non_empty: POSINT
   94                          | REAL
   95                          | IDENTIFIER
   96                          | '#' IDENTIFIER
   97                          | '(' expr ')'
   98                          | expr EXPONENTIATION_OP expr
   99                          | expr CALC_OP expr
  100                          | expr RELATIONAL_OP expr
  101                          | expr LOGICAL_AND_OR_OP expr
  102                          | LOGICAL_NOT_OP expr
  103                          | UNARY_OP expr

  104 @14: ε

  105 @15: ε

  106 function_definition: KW_DEF KW_MAIN '(' ')' ':' @14 body @15 KW_ENDDEF

  107 @16: ε

  108 @17: ε

  109 function_definition: KW_DEF IDENTIFIER '(' arguments ')' return_type ':' @16 body @17 KW_ENDDEF

  110 arguments: ε
  111          | parameter_definition
  112          | arguments ',' parameter_definition

  113 parameter_definition: IDENTIFIER ':' KW_VARIABLE_TYPE
  114                     | IDENTIFIER '[' POSINT ']' ':' KW_VARIABLE_TYPE
  115                     | IDENTIFIER '[' ']' ':' KW_VARIABLE_TYPE

  116 return_type: ε
  117            | KW_FUNC_RETURN KW_VARIABLE_TYPE

  118 body: stmts
  119     | stmts KW_RETURN expr ';' stmts

  120 variable_definition: variable_list ':' KW_VARIABLE_TYPE
  121                    | IDENTIFIER '[' POSINT ']' ':' KW_VARIABLE_TYPE
  122                    | IDENTIFIER '[' ']' ':' KW_VARIABLE_TYPE
  123                    | KW_CONST IDENTIFIER ASSIGNMENT_OP VALUE ':' KW_VARIABLE_TYPE

  124 VALUE: POSINT
  125      | REAL
  126      | STRING

  127 KW_VARIABLE_TYPE: KW_SCALAR
  128                 | KW_INTEGER
  129                 | KW_STR
  130                 | KW_BOOLEAN
  131                 | IDENTIFIER

  132 NUMBERS: POSINT
  133        | REAL

  134 variable_list: IDENTIFIER
  135              | variable_list ',' IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '#' (35) 39 40 41 42 43 72 73 79 81 82 83 86 90 91 92 96
    '(' (40) 13 16 46 50 63 97 106 109
    ')' (41) 13 16 46 50 63 97 106 109
    ',' (44) 43 54 55 112 135
    '.' (46) 75 77 79 81 82 83 84 85 86 88 89
    ':' (58) 13 16 19 20 21 24 26 35 38 39 40 41 46 106 109 113 114 115 120 121 122 123
    ';' (59) 3 4 5 6 7 28 29 30 31 37 45 119
    '[' (91) 19 20 21 39 40 62 71 73 77 81 83 86 88 92 114 115 121 122
    ']' (93) 19 20 21 39 40 62 71 73 77 81 83 86 88 92 114 115 121 122
    error (256)
    IDENTIFIER <str> (258) 9 10 19 20 21 35 39 40 41 42 43 46 50 61 62 70 71 72 73 75 77 79 81 82 83 84 85 86 90 91 92 95 96 109 113 114 115 121 122 123 131 134 135
    POSINT <str> (259) 20 21 39 93 114 121 124 132
    STRING <str> (260) 9 53 55 126
    DECIMAL <str> (261)
    REAL <str> (262) 94 125 133
    KW_IF <str> (263) 13
    KW_ELSE <str> (264) 24
    KW_ENDIF <str> (265) 13
    KW_IN <str> (266) 19 21
    KW_OF <str> (267) 21
    KW_WHILE <str> (268) 16
    KW_ENDWHILE <str> (269) 16
    KW_FOR <str> (270) 19 20 21
    KW_ENDFOR <str> (271) 19
    KW_BREAK <str> (272) 32
    KW_CONTINUE <str> (273) 33
    KW_TRUE <str> (274) 59
    KW_FALSE <str> (275) 58
    KW_VAR <str> (276)
    KW_INT <str> (277)
    KW_REAL <str> (278)
    KW_FUNC <str> (279)
    KW_BEGIN <str> (280)
    KW_DEF <str> (281) 46 106 109
    KW_ENDDEF <str> (282) 46 106 109
    KW_COMP <str> (283) 35
    KW_ENDCOMP <str> (284) 35
    KW_MACRO <str> (285) 9 10
    KW_RETURN <str> (286) 119
    KW_MAIN <str> (287) 106
    KW_FUNC_RETURN <str> (288) 48 117
    KW_INTEGER <str> (289) 128
    KW_SCALAR <str> (290) 127
    KW_STR <str> (291) 129
    KW_CONST <str> (292) 41 123
    KW_BOOLEAN <str> (293) 130
    EXPONENTIATION_OP <str> (294) 65 98
    ASSIGNMENT_OP <str> (295) 20 21 41 70 71 72 73 85 86 123
    CALC_OP <str> (296) 64 99
    UNARY_OP <str> (297) 69 103
    RELATIONAL_OP <str> (298) 66 100
    LOGICAL_NOT_OP <str> (299) 68 102
    LOGICAL_AND_OR_OP <str> (300) 67 101
    KW_PLUS (301)
    KW_MINUS (302)
    KW_MUL (303)
    KW_DIV (304)
    KW_MOD (305)
    KW_LESSEQUAL (306)
    KW_GREATEREQUAL (307)
    KW_LESSTHAN (308)
    KW_GREATHAN (309)
    KW_INEQ (310)
    KW_AND (311)
    KW_OR (312)
    KW_NOT (313)
    KW_EQUAL (314)
    KW_EXPONENT (315)


Nonterminals, with rules where they appear

    $accept (70)
        on left: 0
    program (71)
        on left: 1
        on right: 0
    input <str> (72)
        on left: 2 3 4 5 6 7 8
        on right: 1 3 4 5 6 7 8
    macro <str> (73)
        on left: 9 10
        on right: 8
    commands <str> (74)
        on left: 13 16 19 20 21
        on right: 7 31
    $@1 (75)
        on left: 11
        on right: 13
    @2 <str> (76)
        on left: 12
        on right: 13
    $@3 (77)
        on left: 14
        on right: 16
    @4 <str> (78)
        on left: 15
        on right: 16
    @5 <str> (79)
        on left: 17
        on right: 19
    @6 <str> (80)
        on left: 18
        on right: 19
    else_statement <str> (81)
        on left: 22 24
        on right: 13
    @7 <str> (82)
        on left: 23
        on right: 24
    step <str> (83)
        on left: 25 26
        on right: 19
    stmts <str> (84)
        on left: 27 28 29 30 31
        on right: 13 16 19 24 28 29 30 31 118 119
    loop_thing <str> (85)
        on left: 32 33
        on right: 28
    complicated_types <str> (86)
        on left: 35
        on right: 6
    $@8 (87)
        on left: 34
        on right: 35
    declaration_comp <str> (88)
        on left: 36 37
        on right: 35 37
    variable_definition_comp <str> (89)
        on left: 38 39 40 41
        on right: 37
    variable_list_comp <str> (90)
        on left: 42 43
        on right: 38 43
    function_definition_section <str> (91)
        on left: 44 45
        on right: 35 45
    function_definition_comp <str> (92)
        on left: 46
        on right: 45
    return_type_comp <str> (93)
        on left: 47 48
        on right: 46
    func_call <str> (94)
        on left: 50
        on right: 56 75 77 79 81
    $@9 (95)
        on left: 49
        on right: 50
    func_args <str> (96)
        on left: 51 52 53 54 55
        on right: 50 54 55
    expr <str> (97)
        on left: 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 75 77 79 81 82 83 84 85 86
        on right: 4 10 13 16 20 21 30 52 54 62 63 64 65 66 67 68 69 70 71 72 73 77 81 83 85 86 88 92 97 98 99 100 101 102 103 119
    $@10 (98)
        on left: 74
        on right: 75
    $@11 (99)
        on left: 76
        on right: 77
    $@12 (100)
        on left: 78
        on right: 79
    $@13 (101)
        on left: 80
        on right: 81
    use_of_comp_variable <str> (102)
        on left: 87 88 89
        on right: 82 83 84 85 86 88 89
    use_comp_variable_with_period <str> (103)
        on left: 90
        on right: 87 88 89
    use_comp_variable <str> (104)
        on left: 91 92
        on right: 60
    arithmetic_expr_non_empty <str> (105)
        on left: 93 94 95 96 97 98 99 100 101 102 103
        on right: 19 26
    function_definition <str> (106)
        on left: 106 109
        on right: 5
    @14 <str> (107)
        on left: 104
        on right: 106
    @15 <str> (108)
        on left: 105
        on right: 106
    @16 <str> (109)
        on left: 107
        on right: 109
    @17 <str> (110)
        on left: 108
        on right: 109
    arguments <str> (111)
        on left: 110 111 112
        on right: 46 109 112
    parameter_definition <str> (112)
        on left: 113 114 115
        on right: 111 112
    return_type <str> (113)
        on left: 116 117
        on right: 109
    body <str> (114)
        on left: 118 119
        on right: 46 106 109
    variable_definition <str> (115)
        on left: 120 121 122 123
        on right: 3 29
    VALUE <str> (116)
        on left: 124 125 126
        on right: 41 123
    KW_VARIABLE_TYPE <str> (117)
        on left: 127 128 129 130 131
        on right: 20 21 38 39 40 41 48 113 114 115 117 120 121 122 123
    NUMBERS <str> (118)
        on left: 132 133
        on right: 57
    variable_list <str> (119)
        on left: 134 135
        on right: 120 135


State 0

    0 $accept: • program $end

    $default  reduce using rule 2 (input)

    program  go to state 1
    input    go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: input •
    3 input: input • variable_definition ';'
    4      | input • expr ';'
    5      | input • function_definition ';'
    6      | input • complicated_types ';'
    7      | input • commands ';'
    8      | input • macro

    IDENTIFIER      shift, and go to state 4
    POSINT          shift, and go to state 5
    REAL            shift, and go to state 6
    KW_IF           shift, and go to state 7
    KW_WHILE        shift, and go to state 8
    KW_FOR          shift, and go to state 9
    KW_TRUE         shift, and go to state 10
    KW_FALSE        shift, and go to state 11
    KW_DEF          shift, and go to state 12
    KW_COMP         shift, and go to state 13
    KW_MACRO        shift, and go to state 14
    KW_CONST        shift, and go to state 15
    UNARY_OP        shift, and go to state 16
    LOGICAL_NOT_OP  shift, and go to state 17
    '('             shift, and go to state 18
    '#'             shift, and go to state 19

    $default  reduce using rule 1 (program)

    macro                go to state 20
    commands             go to state 21
    complicated_types    go to state 22
    func_call            go to state 23
    expr                 go to state 24
    use_comp_variable    go to state 25
    function_definition  go to state 26
    variable_definition  go to state 27
    NUMBERS              go to state 28
    variable_list        go to state 29


State 3

    0 $accept: program $end •

    $default  accept


State 4

   20 commands: IDENTIFIER • ASSIGNMENT_OP '[' expr KW_FOR IDENTIFIER ':' POSINT ']' ':' KW_VARIABLE_TYPE
   21         | IDENTIFIER • ASSIGNMENT_OP '[' expr KW_FOR IDENTIFIER ':' KW_VARIABLE_TYPE KW_IN IDENTIFIER KW_OF POSINT ']' ':' KW_VARIABLE_TYPE
   50 func_call: IDENTIFIER • '(' $@9 func_args ')'
   61 expr: IDENTIFIER •
   62     | IDENTIFIER • '[' expr ']'
   70     | IDENTIFIER • ASSIGNMENT_OP expr
   71     | IDENTIFIER • '[' expr ']' ASSIGNMENT_OP expr
   75     | IDENTIFIER • '.' $@10 func_call
   77     | IDENTIFIER • '[' expr ']' '.' $@11 func_call
   84     | IDENTIFIER • '.' use_of_comp_variable
   85     | IDENTIFIER • '.' use_of_comp_variable ASSIGNMENT_OP expr
  121 variable_definition: IDENTIFIER • '[' POSINT ']' ':' KW_VARIABLE_TYPE
  122                    | IDENTIFIER • '[' ']' ':' KW_VARIABLE_TYPE
  134 variable_list: IDENTIFIER •

    ASSIGNMENT_OP  shift, and go to state 30
    '('            shift, and go to state 31
    '['            shift, and go to state 32
    '.'            shift, and go to state 33

    ':'       reduce using rule 134 (variable_list)
    ','       reduce using rule 134 (variable_list)
    $default  reduce using rule 61 (expr)


State 5

  132 NUMBERS: POSINT •

    $default  reduce using rule 132 (NUMBERS)


State 6

  133 NUMBERS: REAL •

    $default  reduce using rule 133 (NUMBERS)


State 7

   13 commands: KW_IF • '(' expr ')' ':' $@1 stmts @2 else_statement KW_ENDIF

    '('  shift, and go to state 34


State 8

   16 commands: KW_WHILE • '(' expr ')' ':' $@3 stmts @4 KW_ENDWHILE

    '('  shift, and go to state 35


State 9

   19 commands: KW_FOR • IDENTIFIER KW_IN '[' arithmetic_expr_non_empty ':' arithmetic_expr_non_empty step ']' ':' @5 stmts @6 KW_ENDFOR

    IDENTIFIER  shift, and go to state 36


State 10

   59 expr: KW_TRUE •

    $default  reduce using rule 59 (expr)


State 11

   58 expr: KW_FALSE •

    $default  reduce using rule 58 (expr)


State 12

  106 function_definition: KW_DEF • KW_MAIN '(' ')' ':' @14 body @15 KW_ENDDEF
  109                    | KW_DEF • IDENTIFIER '(' arguments ')' return_type ':' @16 body @17 KW_ENDDEF

    IDENTIFIER  shift, and go to state 37
    KW_MAIN     shift, and go to state 38


State 13

   35 complicated_types: KW_COMP • IDENTIFIER $@8 ':' declaration_comp function_definition_section KW_ENDCOMP

    IDENTIFIER  shift, and go to state 39


State 14

    9 macro: KW_MACRO • IDENTIFIER STRING
   10      | KW_MACRO • IDENTIFIER expr

    IDENTIFIER  shift, and go to state 40


State 15

  123 variable_definition: KW_CONST • IDENTIFIER ASSIGNMENT_OP VALUE ':' KW_VARIABLE_TYPE

    IDENTIFIER  shift, and go to state 41


State 16

   69 expr: UNARY_OP • expr

    IDENTIFIER      shift, and go to state 42
    POSINT          shift, and go to state 5
    REAL            shift, and go to state 6
    KW_TRUE         shift, and go to state 10
    KW_FALSE        shift, and go to state 11
    UNARY_OP        shift, and go to state 16
    LOGICAL_NOT_OP  shift, and go to state 17
    '('             shift, and go to state 18
    '#'             shift, and go to state 19

    func_call          go to state 23
    expr               go to state 43
    use_comp_variable  go to state 25
    NUMBERS            go to state 28


State 17

   68 expr: LOGICAL_NOT_OP • expr

    IDENTIFIER      shift, and go to state 42
    POSINT          shift, and go to state 5
    REAL            shift, and go to state 6
    KW_TRUE         shift, and go to state 10
    KW_FALSE        shift, and go to state 11
    UNARY_OP        shift, and go to state 16
    LOGICAL_NOT_OP  shift, and go to state 17
    '('             shift, and go to state 18
    '#'             shift, and go to state 19

    func_call          go to state 23
    expr               go to state 44
    use_comp_variable  go to state 25
    NUMBERS            go to state 28


State 18

   63 expr: '(' • expr ')'

    IDENTIFIER      shift, and go to state 42
    POSINT          shift, and go to state 5
    REAL            shift, and go to state 6
    KW_TRUE         shift, and go to state 10
    KW_FALSE        shift, and go to state 11
    UNARY_OP        shift, and go to state 16
    LOGICAL_NOT_OP  shift, and go to state 17
    '('             shift, and go to state 18
    '#'             shift, and go to state 19

    func_call          go to state 23
    expr               go to state 45
    use_comp_variable  go to state 25
    NUMBERS            go to state 28


State 19

   72 expr: '#' • IDENTIFIER ASSIGNMENT_OP expr
   73     | '#' • IDENTIFIER '[' expr ']' ASSIGNMENT_OP expr
   79     | '#' • IDENTIFIER '.' $@12 func_call
   81     | '#' • IDENTIFIER '[' expr ']' '.' $@13 func_call
   82     | '#' • IDENTIFIER '.' use_of_comp_variable
   83     | '#' • IDENTIFIER '[' expr ']' '.' use_of_comp_variable
   86     | '#' • IDENTIFIER '[' expr ']' '.' use_of_comp_variable ASSIGNMENT_OP expr
   91 use_comp_variable: '#' • IDENTIFIER
   92                  | '#' • IDENTIFIER '[' expr ']'

    IDENTIFIER  shift, and go to state 46


State 20

    8 input: input macro •

    $default  reduce using rule 8 (input)


State 21

    7 input: input commands • ';'

    ';'  shift, and go to state 47


State 22

    6 input: input complicated_types • ';'

    ';'  shift, and go to state 48


State 23

   56 expr: func_call •

    $default  reduce using rule 56 (expr)


State 24

    4 input: input expr • ';'
   64 expr: expr • CALC_OP expr
   65     | expr • EXPONENTIATION_OP expr
   66     | expr • RELATIONAL_OP expr
   67     | expr • LOGICAL_AND_OR_OP expr

    EXPONENTIATION_OP  shift, and go to state 49
    CALC_OP            shift, and go to state 50
    RELATIONAL_OP      shift, and go to state 51
    LOGICAL_AND_OR_OP  shift, and go to state 52
    ';'                shift, and go to state 53


State 25

   60 expr: use_comp_variable •

    $default  reduce using rule 60 (expr)


State 26

    5 input: input function_definition • ';'

    ';'  shift, and go to state 54


State 27

    3 input: input variable_definition • ';'

    ';'  shift, and go to state 55


State 28

   57 expr: NUMBERS •

    $default  reduce using rule 57 (expr)


State 29

  120 variable_definition: variable_list • ':' KW_VARIABLE_TYPE
  135 variable_list: variable_list • ',' IDENTIFIER

    ':'  shift, and go to state 56
    ','  shift, and go to state 57


State 30

   20 commands: IDENTIFIER ASSIGNMENT_OP • '[' expr KW_FOR IDENTIFIER ':' POSINT ']' ':' KW_VARIABLE_TYPE
   21         | IDENTIFIER ASSIGNMENT_OP • '[' expr KW_FOR IDENTIFIER ':' KW_VARIABLE_TYPE KW_IN IDENTIFIER KW_OF POSINT ']' ':' KW_VARIABLE_TYPE
   70 expr: IDENTIFIER ASSIGNMENT_OP • expr

    IDENTIFIER      shift, and go to state 42
    POSINT          shift, and go to state 5
    REAL            shift, and go to state 6
    KW_TRUE         shift, and go to state 10
    KW_FALSE        shift, and go to state 11
    UNARY_OP        shift, and go to state 16
    LOGICAL_NOT_OP  shift, and go to state 17
    '('             shift, and go to state 18
    '['             shift, and go to state 58
    '#'             shift, and go to state 19

    func_call          go to state 23
    expr               go to state 59
    use_comp_variable  go to state 25
    NUMBERS            go to state 28


State 31

   50 func_call: IDENTIFIER '(' • $@9 func_args ')'

    $default  reduce using rule 49 ($@9)

    $@9  go to state 60


State 32

   62 expr: IDENTIFIER '[' • expr ']'
   71     | IDENTIFIER '[' • expr ']' ASSIGNMENT_OP expr
   77     | IDENTIFIER '[' • expr ']' '.' $@11 func_call
  121 variable_definition: IDENTIFIER '[' • POSINT ']' ':' KW_VARIABLE_TYPE
  122                    | IDENTIFIER '[' • ']' ':' KW_VARIABLE_TYPE

    IDENTIFIER      shift, and go to state 42
    POSINT          shift, and go to state 61
    REAL            shift, and go to state 6
    KW_TRUE         shift, and go to state 10
    KW_FALSE        shift, and go to state 11
    UNARY_OP        shift, and go to state 16
    LOGICAL_NOT_OP  shift, and go to state 17
    ']'             shift, and go to state 62
    '('             shift, and go to state 18
    '#'             shift, and go to state 19

    func_call          go to state 23
    expr               go to state 63
    use_comp_variable  go to state 25
    NUMBERS            go to state 28


State 33

   75 expr: IDENTIFIER '.' • $@10 func_call
   84     | IDENTIFIER '.' • use_of_comp_variable
   85     | IDENTIFIER '.' • use_of_comp_variable ASSIGNMENT_OP expr

    '#'  shift, and go to state 64

    $default  reduce using rule 74 ($@10)

    $@10                           go to state 65
    use_of_comp_variable           go to state 66
    use_comp_variable_with_period  go to state 67


State 34

   13 commands: KW_IF '(' • expr ')' ':' $@1 stmts @2 else_statement KW_ENDIF

    IDENTIFIER      shift, and go to state 42
    POSINT          shift, and go to state 5
    REAL            shift, and go to state 6
    KW_TRUE         shift, and go to state 10
    KW_FALSE        shift, and go to state 11
    UNARY_OP        shift, and go to state 16
    LOGICAL_NOT_OP  shift, and go to state 17
    '('             shift, and go to state 18
    '#'             shift, and go to state 19

    func_call          go to state 23
    expr               go to state 68
    use_comp_variable  go to state 25
    NUMBERS            go to state 28


State 35

   16 commands: KW_WHILE '(' • expr ')' ':' $@3 stmts @4 KW_ENDWHILE

    IDENTIFIER      shift, and go to state 42
    POSINT          shift, and go to state 5
    REAL            shift, and go to state 6
    KW_TRUE         shift, and go to state 10
    KW_FALSE        shift, and go to state 11
    UNARY_OP        shift, and go to state 16
    LOGICAL_NOT_OP  shift, and go to state 17
    '('             shift, and go to state 18
    '#'             shift, and go to state 19

    func_call          go to state 23
    expr               go to state 69
    use_comp_variable  go to state 25
    NUMBERS            go to state 28


State 36

   19 commands: KW_FOR IDENTIFIER • KW_IN '[' arithmetic_expr_non_empty ':' arithmetic_expr_non_empty step ']' ':' @5 stmts @6 KW_ENDFOR

    KW_IN  shift, and go to state 70


State 37

  109 function_definition: KW_DEF IDENTIFIER • '(' arguments ')' return_type ':' @16 body @17 KW_ENDDEF

    '('  shift, and go to state 71


State 38

  106 function_definition: KW_DEF KW_MAIN • '(' ')' ':' @14 body @15 KW_ENDDEF

    '('  shift, and go to state 72


State 39

   35 complicated_types: KW_COMP IDENTIFIER • $@8 ':' declaration_comp function_definition_section KW_ENDCOMP

    $default  reduce using rule 34 ($@8)

    $@8  go to state 73


State 40

    9 macro: KW_MACRO IDENTIFIER • STRING
   10      | KW_MACRO IDENTIFIER • expr

    IDENTIFIER      shift, and go to state 42
    POSINT          shift, and go to state 5
    STRING          shift, and go to state 74
    REAL            shift, and go to state 6
    KW_TRUE         shift, and go to state 10
    KW_FALSE        shift, and go to state 11
    UNARY_OP        shift, and go to state 16
    LOGICAL_NOT_OP  shift, and go to state 17
    '('             shift, and go to state 18
    '#'             shift, and go to state 19

    func_call          go to state 23
    expr               go to state 75
    use_comp_variable  go to state 25
    NUMBERS            go to state 28


State 41

  123 variable_definition: KW_CONST IDENTIFIER • ASSIGNMENT_OP VALUE ':' KW_VARIABLE_TYPE

    ASSIGNMENT_OP  shift, and go to state 76


State 42

   50 func_call: IDENTIFIER • '(' $@9 func_args ')'
   61 expr: IDENTIFIER •
   62     | IDENTIFIER • '[' expr ']'
   70     | IDENTIFIER • ASSIGNMENT_OP expr
   71     | IDENTIFIER • '[' expr ']' ASSIGNMENT_OP expr
   75     | IDENTIFIER • '.' $@10 func_call
   77     | IDENTIFIER • '[' expr ']' '.' $@11 func_call
   84     | IDENTIFIER • '.' use_of_comp_variable
   85     | IDENTIFIER • '.' use_of_comp_variable ASSIGNMENT_OP expr

    ASSIGNMENT_OP  shift, and go to state 77
    '('            shift, and go to state 31
    '['            shift, and go to state 78
    '.'            shift, and go to state 33

    $default  reduce using rule 61 (expr)


State 43

   64 expr: expr • CALC_OP expr
   65     | expr • EXPONENTIATION_OP expr
   66     | expr • RELATIONAL_OP expr
   67     | expr • LOGICAL_AND_OR_OP expr
   69     | UNARY_OP expr •

    RELATIONAL_OP      shift, and go to state 51
    LOGICAL_AND_OR_OP  shift, and go to state 52

    $default  reduce using rule 69 (expr)


State 44

   64 expr: expr • CALC_OP expr
   65     | expr • EXPONENTIATION_OP expr
   66     | expr • RELATIONAL_OP expr
   67     | expr • LOGICAL_AND_OR_OP expr
   68     | LOGICAL_NOT_OP expr •

    LOGICAL_AND_OR_OP  shift, and go to state 52

    $default  reduce using rule 68 (expr)


State 45

   63 expr: '(' expr • ')'
   64     | expr • CALC_OP expr
   65     | expr • EXPONENTIATION_OP expr
   66     | expr • RELATIONAL_OP expr
   67     | expr • LOGICAL_AND_OR_OP expr

    EXPONENTIATION_OP  shift, and go to state 49
    CALC_OP            shift, and go to state 50
    RELATIONAL_OP      shift, and go to state 51
    LOGICAL_AND_OR_OP  shift, and go to state 52
    ')'                shift, and go to state 79


State 46

   72 expr: '#' IDENTIFIER • ASSIGNMENT_OP expr
   73     | '#' IDENTIFIER • '[' expr ']' ASSIGNMENT_OP expr
   79     | '#' IDENTIFIER • '.' $@12 func_call
   81     | '#' IDENTIFIER • '[' expr ']' '.' $@13 func_call
   82     | '#' IDENTIFIER • '.' use_of_comp_variable
   83     | '#' IDENTIFIER • '[' expr ']' '.' use_of_comp_variable
   86     | '#' IDENTIFIER • '[' expr ']' '.' use_of_comp_variable ASSIGNMENT_OP expr
   91 use_comp_variable: '#' IDENTIFIER •
   92                  | '#' IDENTIFIER • '[' expr ']'

    ASSIGNMENT_OP  shift, and go to state 80
    '['            shift, and go to state 81
    '.'            shift, and go to state 82

    $default  reduce using rule 91 (use_comp_variable)


State 47

    7 input: input commands ';' •

    $default  reduce using rule 7 (input)


State 48

    6 input: input complicated_types ';' •

    $default  reduce using rule 6 (input)


State 49

   65 expr: expr EXPONENTIATION_OP • expr

    IDENTIFIER      shift, and go to state 42
    POSINT          shift, and go to state 5
    REAL            shift, and go to state 6
    KW_TRUE         shift, and go to state 10
    KW_FALSE        shift, and go to state 11
    UNARY_OP        shift, and go to state 16
    LOGICAL_NOT_OP  shift, and go to state 17
    '('             shift, and go to state 18
    '#'             shift, and go to state 19

    func_call          go to state 23
    expr               go to state 83
    use_comp_variable  go to state 25
    NUMBERS            go to state 28


State 50

   64 expr: expr CALC_OP • expr

    IDENTIFIER      shift, and go to state 42
    POSINT          shift, and go to state 5
    REAL            shift, and go to state 6
    KW_TRUE         shift, and go to state 10
    KW_FALSE        shift, and go to state 11
    UNARY_OP        shift, and go to state 16
    LOGICAL_NOT_OP  shift, and go to state 17
    '('             shift, and go to state 18
    '#'             shift, and go to state 19

    func_call          go to state 23
    expr               go to state 84
    use_comp_variable  go to state 25
    NUMBERS            go to state 28


State 51

   66 expr: expr RELATIONAL_OP • expr

    IDENTIFIER      shift, and go to state 42
    POSINT          shift, and go to state 5
    REAL            shift, and go to state 6
    KW_TRUE         shift, and go to state 10
    KW_FALSE        shift, and go to state 11
    UNARY_OP        shift, and go to state 16
    LOGICAL_NOT_OP  shift, and go to state 17
    '('             shift, and go to state 18
    '#'             shift, and go to state 19

    func_call          go to state 23
    expr               go to state 85
    use_comp_variable  go to state 25
    NUMBERS            go to state 28


State 52

   67 expr: expr LOGICAL_AND_OR_OP • expr

    IDENTIFIER      shift, and go to state 42
    POSINT          shift, and go to state 5
    REAL            shift, and go to state 6
    KW_TRUE         shift, and go to state 10
    KW_FALSE        shift, and go to state 11
    UNARY_OP        shift, and go to state 16
    LOGICAL_NOT_OP  shift, and go to state 17
    '('             shift, and go to state 18
    '#'             shift, and go to state 19

    func_call          go to state 23
    expr               go to state 86
    use_comp_variable  go to state 25
    NUMBERS            go to state 28


State 53

    4 input: input expr ';' •

    $default  reduce using rule 4 (input)


State 54

    5 input: input function_definition ';' •

    $default  reduce using rule 5 (input)


State 55

    3 input: input variable_definition ';' •

    $default  reduce using rule 3 (input)


State 56

  120 variable_definition: variable_list ':' • KW_VARIABLE_TYPE
